--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/openverse2.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Algorithima | DSA Visualizer</title>
-    <!-- Google Fonts: Poppins -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <title>DSA Viz</title>
+<!--    Work in progress Title  -->
   </head>
   <body>
     <div id="root"></div>
