major tree revamp

--- a/public/pathfinding.html
+++ b/public/pathfinding.html
@@ -4,13 +4,14 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link id="cssTheme" rel="stylesheet" href="/pathfinding-visualizer/styling/cssBasic.css"/>
     <link rel="shortcut icon" type="image/png" href="/pathfinding-visualizer/styling/c_icon.png"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head>
   <body>
     <div id='navbarDiv'>
      <nav class="navbar navbar-inverse">
        <div class="container-fluid">
          <div class="navbar-header">
-           <a href="/" class="navbar-brand" style="margin-right: 15px; color: #b286ff !important;">🏠 Home</a>
+           <a href="/" class="navbar-brand" style="margin-right: 15px; color: #b286ff !important; font-weight: bold;">🏠 Home</a>
            <a id="refreshButton" class="navbar-brand" href="#">Pathfinding Visualizer</a>
          </div>
          <ul class="nav navbar-nav">
