linkedlist update: menu for circular and singly linkedlist

--- a/public/pathfinding.html
+++ b/public/pathfinding.html
@@ -3,7 +3,7 @@
     <title>Pathfinding Visualizer</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link id="cssTheme" rel="stylesheet" href="/pathfinding-visualizer/styling/cssBasic.css"/>
-    <link rel="shortcut icon" type="image/png" href="/pathfinding-visualizer/styling/c_icon.png"/>
+    <link rel="shortcut icon" type="image/svg" href="/pathfinding-visualizer/styling/openverse2.svg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head>
   <body>
